@@ -1,30 +1,0 @@
-#!/bin/sh
-
-set -e   # exit on the first error
-
-RES=@GAMA_RESULTS@/gama-local-updated-xml
-if [ ! -d $RES ] ; then
-    mkdir -p $RES
-fi
-
-GAMA_LOCAL=@top_builddir@/bin/gama-local
-GAMA_LOCAL_XSD=@GAMA_XML@/gama-local.xsd
-
-for t in gama-local.gkf azimuth-angle.gkf local_3d.gkf skorepa-dusek.gkf \
-         mikhail-7.4.gkf minimal.gkf seq-dsuloha-d.gkf tst-tetrahedron-2.gkf \
-         tst-tetrahedron-3-gon.gkf tst-tetrahedron-3-deg.gkf
-do
-    $GAMA_LOCAL @GAMA_INPUT@/$t \
-        --xml $RES/$t-1.xml \
-        --updated-xml $RES/$t-1.gkf
-    $GAMA_LOCAL $RES/$t-1.gkf \
-        --xml $RES/$t-2.xml
-    src/check_xml_xml "updated xml $t" \
-        $RES/$t-1.xml \
-        $RES/$t-2.xml
-
-if test "x$GNU_GAMA_LOCAL_TEST_XMLLINT" = "xyes"; then
-    xmllint --schema $GAMA_LOCAL_XSD \
-       $RES/$t-1.gkf --noout
-fi
-done
